src/test/deca/context/valid/fields/selection_nested_two_levels.deca
// Description :
//    Sélection de champ imbriquée sur deux niveaux.
//
// Resultats :
//    OK

class B {
    public int y;
}

class A {
    public B b;
}

{
    A a = new A();
    a.b = new B();
    a.b.y = 9;
    println(a.b.y);
}

